<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="30dp"
    android:paddingEnd="20dp"
    tools:context="fragments.ProfileFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/profile"
        android:textColor="@color/app_color_titles"
        android:textSize="39sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/user_avatar"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/empty_string"
            android:src="@drawable/Avatar"
            app:srcCompat="@drawable/avatar" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/profile_name"
                android:textColor="@color/app_color_titles"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/user_majority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/belgrano"
                android:text="@string/profile_majority"
                android:textColor="@color/app_color_text"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/profile_desc"
        android:textColor="@color/app_color_titles"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/user_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/belgrano"
        android:paddingEnd="10dp"
        android:text="@string/profile_desc_text"
        android:textColor="@color/app_color_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/review_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_count"
        android:textColor="@color/app_color_titles"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>